--- a/index.html
+++ b/index.html
@@ -65,37 +65,37 @@
                 <h1 class="fancyTwo"><span>All Services</span></h1>
                 <div class="shop-content">
                     <div class="shop-row">
-                        <img src="/images/battery.png" alt="Battery">
+                        <img src="images/battery.png" alt="Battery">
                         <h2>Battery <br> Replacement</h2>
                     </div>
                     <div class="shop-row">
-                        <img src="/images/abs.png" alt="abs">
+                        <img src="images/abs.png" alt="abs">
                         <h2>Brake <br> Services</h2>
                     </div>
                     <div class="shop-row">
-                        <img src="/images/es.png" alt="es">
+                        <img src="images/es.png" alt="es">
                         <h2>Electrical <br> System Repairs</h2>
                     </div>
                     <div class="shop-row">
-                        <img src="/images/engine.png" alt="Engine">
+                        <img src="images/engine.png" alt="Engine">
                         <h2>Engine <br> Repair/Diagnostics</h2>
                     </div>
                 </div>
                 <div class="shop-content">
                     <div class="shop-row">
-                        <img src="/images/oil.png" alt="oil">
+                        <img src="images/oil.png" alt="oil">
                         <h2>Oil Change & <br> Fluid Services</h2>
                     </div>
                     <div class="shop-row">
-                        <img src="/images/suspension.png" alt="suspension">
+                        <img src="images/suspension.png" alt="suspension">
                         <h2>Suspension <br> Repair</h2>
                     </div>
                     <div class="shop-row">
-                        <img src="/images/transmission.png" alt="transmission">
+                        <img src="images/transmission.png" alt="transmission">
                         <h2>Transmission <br> Services</h2>
                     </div>
                     <div class="shop-row">
-                        <img src="/images/inspect.png" alt="inspect">
+                        <img src="images/inspect.png" alt="inspect">
                         <h2>Vehicle <br> Inspection</h2>
                     </div>
                 </div>
